2011-07-13  Peter Bloomfield

	* configure.in: remove references to gtk+-2.0.

2011-06-22  Peter Bloomfield

	Drop bad-address-color

	* src/balsa-app.h:
	* src/balsa-mime-widget-message.c (add_header_sigstate):
	* src/pref-manager.c (open_preferences_manager), (apply_prefs),
	(set_prefs), (colors_subpage):
	* src/save-restore.c (config_global_load), (config_save):
	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler),
	(create_info_pane):
	* src/sendmsg-window.h:

2011-06-22  Peter Bloomfield

	* src/sendmsg-window.c (add_attachment): do not cast non-widget
	to GtkWidget*.

2011-06-10  Peter Bloomfield

	* src/balsa-mime-widget-message.c (bm_header_widget_realized):
	set the foreground and background colors for SELECTED state as
	well as for NORMAL, so that selected text is distinguished.

2011-06-05  Peter Bloomfield

	* src/save-restore.c (config_identities_load): load identities
	in the order in which they were saved.
	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler),
	(sw_combo_box_changed), (create_from_entry): move selected
	identity to the front of
	balsa_app.identities; see
	<URL:http://mail.gnome.org/archives/balsa-list/2011-May/msg00025.html>
	(Carlos Franke).

2011-06-01  Peter Bloomfield

	Respond to
	<URL:http://mail.gnome.org/archives/balsa-list/2011-May/msg00023.html>

	* src/sendmsg-window.c (setup_headers_from_message): make the
	blank line in the recipient widget not a Bcc: line;
	(setup_headers_from_identity): ditto.

2011-05-31  Peter Bloomfield

	* src/main.c (mw_message_received_cb): present compose window;
	(main): give unique_app_new_with_commands a non-NULL startup-id,
	because when NULL it creates a fake timestamp, which results in
	the running window being presented.

2011-05-28  Peter Bloomfield

	* src/main.c (balsa_handle_automation_options): do not send
	ACTIVATE when asked for status; see
	http://mail.gnome.org/archives/balsa-list/2011-May/msg00015.html

2011-04-16  Peter Bloomfield

	Use GDesktopAppInfo instead of GAppInfo
