@@ -1,3 +1,8 @@
+2011-07-21  Peter Bloomfield
+
+	* libbalsa/imap/siobuf.c (raw_write), (sio_flush_buffer),
+	(sio_flush): indicate when buffer has been deallocated.
+
 2011-07-13  Peter Bloomfield
 
 	* configure.in: remove references to gtk+-2.0.
